--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
-registry=http://192.168.20.10:8081/repository/npm-group/
-proxy=http://192.168.20.10:8081/repository/npm-proxy/
+registry=http://nexus-dev.yulintu.com/repository/npm-group/
+proxy=http://nexus-dev.yulintu.com/repository/npm-proxy/
