--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-testing-library": "^3.9.2",
     "eslint-webpack-plugin": "^2.1.0",
+    "fetch-jsonp": "^1.2.1",
     "file-loader": "6.1.1",
     "freesia-sso": "^1.0.15",
     "fs-extra": "^9.0.1",
