--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.3.0",
+    "@ant-design/pro-card": "^1.18.6",
+    "@ant-design/pro-layout": "^6.31.3",
     "@babel/core": "7.12.3",
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.2",
     "@svgr/webpack": "5.4.0",
