--- a/package.json
+++ b/package.json
@@ -63,13 +63,14 @@
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "5.0.2",
     "prompts": "2.4.0",
+    "qiankun": "^2.6.2",
     "react": "^17.0.1",
     "react-app-polyfill": "^2.0.0",
     "react-dev-utils": "^11.0.1",
     "react-dom": "^17.0.1",
+    "react-highlight": "^0.14.0",
     "react-loadable": "^5.5.0",
     "react-refresh": "^0.8.3",
-    "react-highlight": "^0.14.0",
     "react-router-dom": "^5.2.0",
     "resolve": "1.18.1",
     "resolve-url-loader": "^3.1.2",
@@ -96,6 +97,7 @@
       "react-app/jest"
     ],
     "rules": {
+      "no-undef": "off",
       "no-unused-vars": "off",
       "jsx-a11y/alt-text": "off",
       "array-callback-return": "off",
