--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
-registry=http://61.157.91.111:3007/repository/npm-group/
-proxy=http://61.157.91.111:3007/repository/npm-proxy/
+registry=http://nexus-dev.yulintu.com/repository/npm-group/
+proxy=http://nexus-dev.yulintu.com/repository/npm-proxy/
