--- a/public/config/app.json
+++ b/public/config/app.json
@@ -14,7 +14,14 @@
                     "logoSvg": "logo-xing",
                     "rightExtra": [
                         {
-                            "template": "@system/addons/layout-header-user-menu"
+                            "template": "@system/addons/layout-header-user-menu",
+                            "props": {
+                                "extra": [
+                                    {
+                                        "template": "@system/addons/theme-settings-menu-item"
+                                    }
+                                ]
+                            }
                         }
                     ]
                 }
